# spacex-data-platform

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
spacex_data_platform/: __main__.py
spacex_data_platform/data_visualization/: run.py
spacex_data_platform/ingestion/: constants.py
spacex_data_platform/ingestion/bronze/: bronze_data.py
spacex_data_platform/ingestion/raw/: api_spacex_data.py
spacex_data_platform/ingestion/silver/: cores_data.py  fairings_data.py  silver_data.py
spacex_data_platform/ingestion/silver/schemas/: cores_flights.py  fairings.py
tests/ingestion/: test_bronze.py  test_raw.py  test_silver.py
