[tool.poetry]
name = "spacex-data-platform"
version = "0.1.0"
description = "SpaceX Data Platform"
authors = ["Darth-ATA"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
boto3 = "^1.28.57"
awscli = "^1.29.57"
types-requests = "^2.31.0.10"
streamlit = "^1.28.0"
python-dotenv = "^1.0.1"
s3fs = "^2024.3.1"
ruff = "^0.4.1"
pre-commit = "^3.7.0"
interrogate = "^1.7.0"
pytest-cov = "^5.0.0"
freezegun = "^1.5.1"
pandera = "^0.19.2"
duckdb = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-xdist = "^3.3.1"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
ignore-init-method = false
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
ignore-overloaded-functions = false
fail-under = 80
# example values
exclude = ["setup.py", "docs", "build"]
# example regex
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*", ".*__main__.py", ".*config.py", ".*constants.py"]
ext = []
# possible values: sphinx (default), google
style = "google"
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 3
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
# output file logation
generate-badge = "badges/interrogate.svg"
badge-format = "svg"
badge-style = "flat"
